Noodling with templates. Fix z-index of tribe dropdown.

--- a/style.css
+++ b/style.css
@@ -159,4 +159,7 @@ padding: 18px 34px;
 }
 	
 	
-
+/* Prevent tribe dropdown Z-ordering itself above the menu bar. */
+#tribe-bar-views .tribe-bar-views-list {
+  z-index: 50; 
+}
